2015-11-10  Natalia Portillo  <claunia@claunia.com>

	* BFS.cs:
	  Invert endian description

2015-11-09  Natalia Portillo  <claunia@claunia.com>

	* BFS.cs:
	  Prevent index out of array on checking BeFS with
	  less-than-sector-size boot sector.

2015-11-09  Natalia Portillo  <claunia@claunia.com>

	* BFS.cs:
	  Corrected decoding fields.
	Added supports for boot sector smaller than device size as in
	  some Be CDs.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj:
	  Upgrade .NET version to 4.0.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* FAT.cs:
	* FFS.cs:
	* LisaFS.cs:
	* ProDOS.cs:
	* ISO9660.cs:
	* UNIXBFS.cs:
	* SolarFS.cs:
	* AmigaDOS.cs:
	* AppleHFS.cs:
	* DiscImageChef.Filesystems.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* ODS.cs:
	* FFS.cs:
	* FAT.cs:
	* BFS.cs:
	* SysV.cs:
	* HPFS.cs:
	* NTFS.cs:
	* Opera.cs:
	* extFS.cs:
	* ext2FS.cs:
	* ProDOS.cs:
	* Plugin.cs:
	* LisaFS.cs:
	* Symbian.cs:
	* ISO9660.cs:
	* SolarFS.cs:
	* MinixFS.cs:
	* UNIXBFS.cs:
	* AppleMFS.cs:
	* AppleHFS.cs:
	* AmigaDOS.cs:
	* PCEngine.cs:
	* AppleHFSPlus.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj:
	  Move filesystems to a separate library.
